@@ -568,6 +568,8 @@ Other Changes
     Lucene-Java (hossman)
 
 17. SOLR-645: Refactored SimpleFacetsTest (Lars Kotthoff via hossman)
+
+18. SOLR-591: Changed Solrj default value for facet.sort to true (Lars Kotthoff via Shalin) 
     
 Build
  1. SOLR-411.  Changed the names of the Solr JARs to use the defacto standard JAR names based on
